--- a/homepage.html
+++ b/homepage.html
@@ -9,9 +9,10 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   
+  <a href="login.php">LOGIN/REGISTER</a>
   <a href="indexsearch.php">Select Rental CAR</a>
   <a href="login.php">LOGOUT</a>
-  <a href="#">About</a>
+  <a href="#"Pre-Pay For Parking Services</a>
   
 </div>
 
