--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
   <a href="login.php">LOGIN/REGISTER</a>
   <a href="indexsearch.php">Select Rental CAR</a>
   <a href="login.php">LOGOUT</a>
-  <a href="#"Pre-Pay For Parking Services</a>
+  <a href="#">Pre-Pay For Parking Services</a>
   
 </div>
 
