--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/homepage.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="login.php">Login</a>
-    <a href="login.php">Register</a>
-    <a href="indexsearch.php">Car Rental</a>
-    <a href="indexsearch.php">Parking Services</a>
-    <a href="login.php">Logout</a>
+    <a href="./login.php">Login</a>
+    <a href="./login.php">Register</a>
+    <a href="./search.php">Car Rental</a>
+    <a href="./search.php">Parking Services</a>
+    <a href="./login.php">Logout</a>
   </div>
   <div id="main">
-    <h1>Travel Agent</h1>
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <h1>Welcome to the Travel Force</h1>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Menu</span>
   </div>
   <script>
     function openNav() {
